--- a/styles.css
+++ b/styles.css
@@ -12,67 +12,32 @@
 }
 
 body{
-    overflow: scroll;
-    width: 100vw;
     margin: 0;
     padding: 0;
     font-family: "Josefin Sans", Verdana;
     font-size: 18px;
-    font-weight: 300; 
-    background: linear-gradient(var(--BackgroundGradient));
-    border: 1px solid red;
-}
-
-.container{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    font-weight: 300;  
+    width: 100vw;
+    min-height: 100vh; 
+    
 }
 
 .logo{
-    order: 1;
-    align-self: flex-start;
-    padding: 1.5rem;
     height: 5rem;
     width: 100%;
 }
-
 .logo img{
     height: 1.5rem;
     margin: 0;
 }
 
-.photo{
-    order: 2;
-    width: 100%;
-}
-
-.photo img{
-    width: 100%;
-    height:auto;
-}
-
-.text{
-    order: 3;
-    margin: 0;
-    padding: 0; 
-    width: 100%;
-    text-align: center;
-}
-
-h1, h2{
-    font-size: 11vw;
+h1, h2 {
     text-transform: uppercase;
     letter-spacing: 0.3em;
-    margin: 0;
 }
-
 h1{
     font-weight: 300;
     color: var(--primaryColour);
-    margin-top: 2.5rem;
-    margin-bottom: .5rem;
 }
 
 h2{
@@ -86,21 +51,21 @@ h2{
     letter-spacing: 0.02em;
     line-height: 1.5em;
     color: var(--primaryColour);
-    margin: 1rem 1.5rem;
 }
 
 form{
-    width: 80vw;
-    margin: 2rem auto 7rem auto;
+    width: 85%;
+    margin: 0;
 }
 
 input{
-    margin: auto;
-    padding: 1rem 1.5rem 1rem 1.5rem;
-    border-radius: 25px;
+    margin: 0;
+    padding: 1.2rem;
+    border-radius: 25rem;
     border: 1px solid var(--primaryColour);
     background-color: transparent;
-    min-width: 100%;
+    min-width: 90%;
+    height: 5vh;
     
 }
 
@@ -114,33 +79,235 @@ input{
 button{
     background: linear-gradient(var(--ButtonGradient));
     border: none;
-    padding: 0.87rem 1.5rem 0.77rem 1.8rem;
-    margin: none;
+    background-color: blueviolet;
+    margin: 0;
     position: absolute;
     z-index: 2;
-    transform: translateX(-4rem);
-    border-radius: 30px;
-    box-shadow: 0 10px 10px 2px var(--ButtonShadow);
-   
+    transform: translateX(-70%);
+    border-radius: 25rem;
+    box-shadow: 0 0.5rem 0.7rem 0.2rem var(--ButtonShadow);
+    cursor: pointer;
+    height: 5vh;
+    width: 7vh;
 }
 
-footer {
-    order: 4;
-    height:100%;
-    width:100vw;
+.alert{
+    visibility: hidden;
+}
+
+footer{
+    max-width: 100vw;
     text-align: center;
     font-weight: 300;
-    font-size: 2vw;
     color: var(--neutralColor);
     margin: 0;
 }
 
-@media only screen and (orientation:landscape) {
-    
-    .text{
-        background: url("images/bg-pattern-desktop.svg");
-        background-repeat: no-repeat;
-        background-size: cover;
+@media only screen and (orientation:portrait) {
+    body{
+        
+        /* width: 100vw;
+        min-height: 100vh;
+        margin: 0;
+        padding: 0; */
+        /* font-family: "Josefin Sans", Verdana;
+        font-size: 18px;
+        font-weight: 300;  */
+        background: linear-gradient(var(--BackgroundGradient));
     }
+
+    .container{
+        width: 100%;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo{
+        order: 1;
+        align-self: flex-start;
+        padding: 1.5rem;
+       /* height: 5rem;
+        width: 100%; */
+    }
+
+    /* .logo img{
+        height: 1.5rem;
+        margin: 0;
+    } */
+
+    .photo{
+        order: 2;
+        width: 100%;
+    }
+
+    .photo img{
+        width: 100%;
+        height: auto;
+    }
+
+    .text{
+        order: 3;
+        margin: 0;
+        padding: 0; 
+        width: 100%;
+        text-align: center;
+    }
+
+    h1, h2{
+        font-size: 11vw;
+        /* text-transform: uppercase;
+        letter-spacing: 0.3em; */
+        margin: 0;
+    }
+
+    h1{
+        /* font-weight: 300;
+        color: var(--primaryColour); */
+        margin-top: 3rem;
+        margin-bottom: .5rem;
+    }
+
+    /* h2{
+        font-weight: 600;
+        color: var(--neutralColor);
+    } */
+
+    .text p{
+        /* font-weight: 400;
+        font-size: 3.70vw;
+        letter-spacing: 0.02em;
+        line-height: 1.5em;
+        color: var(--primaryColour); */
+        margin: 1rem 2rem;
+    }
+
+    form{
+        /* width: 90%; */
+        margin: 2rem auto 7rem auto;
+    } 
+
+    /* input{
+        margin: auto;
+        padding: 1rem 1.5rem 1rem 1.5rem;
+        border-radius: 25px;
+        border: 1px solid var(--primaryColour);
+        background-color: transparent;
+        min-width: 100%;
+        
+    } */
+
+    ::placeholder{
+        font-size: 2vw;
+        /* font-family: "Josefin Sans";
+        font-weight: 400;
+        color: var(--primaryColour);
+        opacity: 0.5; */
+    }
+
+    button{
+        /* background: linear-gradient(var(--ButtonGradient));
+        border: none; */
+        /* transform: translateX(-4rem); */
+        /* padding: 0.87rem 1.5rem 0.77rem 1.8rem; */
+        /* margin: none;
+        position: absolute;
+        z-index: 2;
+        transform: translateX(-4rem);
+        border-radius: 30px;
+        box-shadow: 0 10px 10px 2px var(--ButtonShadow);
+        cursor: pointer; */
+    } 
+
+    footer {
+        order: 4;
+        /* height: 100%; */
+        /* max-width: 100vw;
+        text-align: center;
+        font-weight: 300; */
+        font-size: 2vw;
+        /* color: var(--neutralColor); */
+        /* margin: 0; */
+    }
+}
+@media only screen and (orientation:landscape) {
+
+    .body{
+        min-height: 100vh;
+        background: linear-gradient(var(--BackgroundGradient));
+    }    
+    .container{
+        max-width: 100%;
+        display: grid;
+        grid-template-columns: repeat(10, 10%);
+        grid-template-rows: repeat(10);
+        gap:0;
+        background: linear-gradient(var(--BackgroundGradient));
+    }
+
+    .bg{
+        background-image: url("images/bg-pattern-desktop.svg");
+        background-repeat: no-repeat;
+        background-size: 75% 200%;
+        background-attachment: fixed;
+        background-position-y: -45rem;
+        background-position-x: -8rem;
+        
+    }
+    .logo{
+        grid-column: 1/7;
+        grid-row: 1;
+        min-height: 100%;
+        padding: 4vh 0 10vh 8vw;
+    }
+
+    .logo img {
+        height: 3vh;
+    }
+
+    .text{
+        grid-column: 1/7;
+        grid-row: 2/11;
+        text-align: left;
+        margin: 0;
+        padding: 3vh 10vw 0 8vw;
+       
+    }
+
+    h1, h2{
+        font-size: 4vw;
+        margin: 0;
+    }
+
+    .text p{
+        font-size: 1.2vw;
+        padding: 0 7vw 2vh 0; 
+    }
+
+    .photo{
+        grid-row: 1/11;
+        grid-column: 7/11; 
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    .photo img{
+        width: 100%;
+    }
+
+    input{
+        min-width: 80%;
+    }
+
+    ::placeholder{
+        font-size: .7vw;
+    }
+
+    footer{
+        grid-column: 1/7;
+        grid-row: 10;
+        font-size: 1vw;
+    }
+    
 }   
   
