--- a/styles.css
+++ b/styles.css
@@ -4,37 +4,40 @@
 
 :root{
     --primaryColour: hsl(0, 36%, 70%);
-    --ButtonShadow: rgba(243, 184, 184, 0.438);
-    --SoftRed: hsl(0, 93%, 68%);
+    --backgroundPink: hsl(0, 100%, 98%);
+    --buttonShadow: rgba(243, 184, 184, 0.438);
+    --softRed: hsl(0, 93%, 68%);
     --neutralColor: hsl(0, 6%, 24%);
-    --BackgroundGradient: 135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%);
-    --ButtonGradient: 135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%);
+    --backgroundGradient: 135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%);
+    --buttonGradient: 135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%);
 }
 
 body{
+    background: linear-gradient(var(--backgroundGradient)); 
     margin: 0;
     padding: 0;
+    width: 100vw;
+    min-height: 100vh; 
     font-family: "Josefin Sans", Verdana;
     font-size: 18px;
     font-weight: 300;  
-    width: 100vw;
-    min-height: 100vh; 
-    
 }
 
 .logo{
     height: 5rem;
     width: 100%;
 }
+
 .logo img{
     height: 1.5rem;
     margin: 0;
 }
 
-h1, h2 {
+h1, h2{
     text-transform: uppercase;
     letter-spacing: 0.3em;
 }
+
 h1{
     font-weight: 300;
     color: var(--primaryColour);
@@ -48,8 +51,8 @@ h2{
 .text p{
     font-weight: 400;
     font-size: 3.70vw;
-    letter-spacing: 0.02em;
     line-height: 1.5em;
+    letter-spacing: 0.02em;
     color: var(--primaryColour);
 }
 
@@ -58,15 +61,31 @@ form{
     margin: 0;
 }
 
+form.invalid {
+    background-image: url("images/icon-error.svg");
+    background-repeat: no-repeat;
+    background-position: 85%;
+}
+
 input{
+    font-family: "Josefin Sans", Verdana;
+    font-weight: 400;
+    color: var(--neutralColor);
     margin: 0;
     padding: 1.2rem;
     border-radius: 25rem;
     border: 1px solid var(--primaryColour);
     background-color: transparent;
     min-width: 90%;
-    height: 5vh;
-    
+    height: 5vh; 
+}
+
+input:focus{
+    outline: none ;
+}
+
+input:invalid{
+    border: var(--softRed) solid 2px;
 }
 
 ::placeholder{
@@ -77,22 +96,28 @@ input{
 }
 
 button{
-    background: linear-gradient(var(--ButtonGradient));
+    background: linear-gradient(var(--buttonGradient));
     border: none;
-    background-color: blueviolet;
     margin: 0;
     position: absolute;
     z-index: 2;
     transform: translateX(-70%);
     border-radius: 25rem;
-    box-shadow: 0 0.5rem 0.7rem 0.2rem var(--ButtonShadow);
+    box-shadow: 0 0.5rem 0.7rem 0.2rem var(--buttonShadow);
     cursor: pointer;
     height: 5vh;
     width: 7vh;
 }
 
-.alert{
-    visibility: hidden;
+button:hover,
+button:focus {
+    filter: brightness(125%);
+}
+
+#alert{
+    display: block;
+    font-weight: 400;
+    color: var(--softRed)
 }
 
 footer{
@@ -103,19 +128,13 @@ footer{
     margin: 0;
 }
 
-@media only screen and (orientation:portrait) {
-    body{
-        
-        /* width: 100vw;
-        min-height: 100vh;
-        margin: 0;
-        padding: 0; */
-        /* font-family: "Josefin Sans", Verdana;
-        font-size: 18px;
-        font-weight: 300;  */
-        background: linear-gradient(var(--BackgroundGradient));
-    }
+footer a{
+    color: var(--primaryColour);
+    font-weight: 400;
+    text-decoration: none;
+}
 
+@media only screen and (orientation:portrait) {
     .container{
         width: 100%;
         display:flex;
@@ -127,14 +146,7 @@ footer{
         order: 1;
         align-self: flex-start;
         padding: 1.5rem;
-       /* height: 5rem;
-        width: 100%; */
     }
-
-    /* .logo img{
-        height: 1.5rem;
-        margin: 0;
-    } */
 
     .photo{
         order: 2;
@@ -156,104 +168,63 @@ footer{
 
     h1, h2{
         font-size: 11vw;
-        /* text-transform: uppercase;
-        letter-spacing: 0.3em; */
         margin: 0;
     }
 
     h1{
-        /* font-weight: 300;
-        color: var(--primaryColour); */
         margin-top: 3rem;
         margin-bottom: .5rem;
     }
 
-    /* h2{
-        font-weight: 600;
-        color: var(--neutralColor);
-    } */
-
     .text p{
-        /* font-weight: 400;
-        font-size: 3.70vw;
-        letter-spacing: 0.02em;
-        line-height: 1.5em;
-        color: var(--primaryColour); */
         margin: 1rem 2rem;
     }
 
     form{
-        /* width: 90%; */
         margin: 2rem auto 7rem auto;
     } 
 
-    /* input{
-        margin: auto;
-        padding: 1rem 1.5rem 1rem 1.5rem;
-        border-radius: 25px;
-        border: 1px solid var(--primaryColour);
-        background-color: transparent;
-        min-width: 100%;
-        
-    } */
-
     ::placeholder{
         font-size: 2vw;
-        /* font-family: "Josefin Sans";
-        font-weight: 400;
-        color: var(--primaryColour);
-        opacity: 0.5; */
     }
 
-    button{
-        /* background: linear-gradient(var(--ButtonGradient));
-        border: none; */
-        /* transform: translateX(-4rem); */
-        /* padding: 0.87rem 1.5rem 0.77rem 1.8rem; */
-        /* margin: none;
+    #alert{
         position: absolute;
-        z-index: 2;
-        transform: translateX(-4rem);
-        border-radius: 30px;
-        box-shadow: 0 10px 10px 2px var(--ButtonShadow);
-        cursor: pointer; */
-    } 
+        transform: translate(15vw, -12vh);
+        font-size: 2.5vw;
+    }
 
     footer {
-        order: 4;
-        /* height: 100%; */
-        /* max-width: 100vw;
-        text-align: center;
-        font-weight: 300; */
+        order: 5;
         font-size: 2vw;
-        /* color: var(--neutralColor); */
-        /* margin: 0; */
     }
 }
+
 @media only screen and (orientation:landscape) {
 
     .body{
         min-height: 100vh;
-        background: linear-gradient(var(--BackgroundGradient));
-    }    
+        background: linear-gradient(var(--backgroundGradient));
+    }   
+
     .container{
         max-width: 100%;
         display: grid;
         grid-template-columns: repeat(10, 10%);
         grid-template-rows: repeat(10);
         gap:0;
-        background: linear-gradient(var(--BackgroundGradient));
+        background: linear-gradient(var(--backgroundGradient));
     }
 
     .bg{
         background-image: url("images/bg-pattern-desktop.svg");
         background-repeat: no-repeat;
-        background-size: 75% 200%;
+        background-size: 75% 150%;
         background-attachment: fixed;
-        background-position-y: -45rem;
+        background-position-y: -25rem;
         background-position-x: -8rem;
-        
     }
+
     .logo{
         grid-column: 1/7;
         grid-row: 1;
@@ -271,11 +242,10 @@ footer{
         text-align: left;
         margin: 0;
         padding: 3vh 10vw 0 8vw;
-       
     }
 
     h1, h2{
-        font-size: 4vw;
+        font-size: 5vw;
         margin: 0;
     }
 
@@ -285,6 +255,7 @@ footer{
     }
 
     .photo{
+        background-color: var(--backgroundPink);
         grid-row: 1/11;
         grid-column: 7/11; 
         height: 100vh;
@@ -293,6 +264,9 @@ footer{
 
     .photo img{
         width: 100%;
+        height: 100%;
+        min-width: 80%;
+        min-height: 80%
     }
 
     input{
@@ -301,6 +275,14 @@ footer{
 
     ::placeholder{
         font-size: .7vw;
+    }
+
+    button{
+        width: 9vh;
+    }
+    
+    #alert {
+        padding: 1vh 3vh 1vh 3vh ;
     }
 
     footer{
