--- a/styles.css
+++ b/styles.css
@@ -64,12 +64,11 @@ form{
 form.invalid {
     background-image: url("images/icon-error.svg");
     background-repeat: no-repeat;
-    background-position: 85%;
+    background-position: 60%;
 }
 
 input{
     min-width: 90%;
-    height: 5vh; 
     margin: 0;
     padding: 1.2rem;
     background-color: transparent;
@@ -98,9 +97,7 @@ input:invalid{
 button{
     position: absolute;
     z-index: 2;
-    transform: translateX(-70%);
-    height: 5vh;
-    width: 7vh;
+    transform: translateX(-90%);
     margin: 0;
     background: linear-gradient(var(--buttonGradient));
     border: none;
@@ -185,8 +182,17 @@ footer a{
         margin: 2rem auto 7rem auto;
     } 
 
+    input{
+        height: 5vh;
+    }
+
     ::placeholder{
         font-size: 2vw;
+    }
+
+    button{
+        width: 6em;
+        height: 3.15em;
     }
 
     #alert{
@@ -266,6 +272,7 @@ footer a{
 
     input{
         min-width: 80%;
+        height: 6vh;
     }
 
     ::placeholder{
@@ -273,7 +280,8 @@ footer a{
     }
 
     button{
-        width: 9vh;
+        height: 6vh;
+        width: 7.4rem;
     }
     
     #alert {
